# flask-journal

./: .env  .gitignore  Dockerfile  MANIFEST.in  README.md  extra-requirements.txt  pyproject.toml  requirements.txt
.github/: dependabot.yaml
.github/workflows/: dev-build.yml  python.yaml  release.yaml
.tekton/: docker-push.yaml
.tekton/pipelines/: docker-build-rhtap.yaml  python-docker-build-rhtap.yaml
.tekton/tasks/: pytest.yaml  python-build.yaml
flask_journal/: __init__.py  app.py  config.py  errors.py  logging.py  metrics.py
flask_journal/forms/: __init__.py  admin.py  base.py  entry.py  fields.py  tag.py  widgets.py
flask_journal/models/: __init__.py  base.py  db.py  entry.py  rbac.py  setup.py  tag.py  user.py
flask_journal/security/: __init__.py  signals.py  utils.py
flask_journal/views/: __init__.py  admin.py  base.py  entry.py  home.py  settings.py  tag.py  themes.py  utils.py
migrations/: alembic.ini  env.py
migrations/versions/: 12aa0adaa78d_.py  2023_08_20_1758-d0551f9f68ce_.py  2023_10_06_1406-1fbdb95e0d10_.py  2023_12_07_1124-1594ebf10015_.py  2023_12_07_2002-c2433ae45adf_.py  2024_04_18_1058-fb34bd2800a0_.py  40e364e4a0df_.py  835b6f637d98_.py
scripts/: entrypoint.sh  gunicorn.config.py
src/flask_journal/: __init__.py  app.py  config.py  errors.py  metrics.py  utils.py
test/: base.py  config.py  conftest.py  requirements.txt  test_security.py  test_smoke.py  utils.py
test/e2e/: test_gunicorn.py
test/integration/: conftest.py  test_alembic.py  test_metrics.py  test_security.py  test_views.py
test/unit/: test_views.py  (+1 more)
(+61 files in other folders)
